--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -39,7 +39,9 @@
     "packageManager": "teambit.dependencies/pnpm",
     "policy": {
       "dependencies": {
-        "@testing-library/react": "13.4.0"
+        "@testing-library/react": "13.4.0",
+        "react": "18.2.0",
+        "react-dom": "18.2.0"
       },
       "peerDependencies": {}
     },
